--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "mockery/mockery": "^1.0",
         "orchestra/testbench": "^7.0|^8.0",
         "phpstan/phpstan": "^1.10",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
