--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "xaamin/lumen-sanctum",
-    "description": "Lumen Sanctum provides a featherweight authentication system for SPAs and simple APIs.",
+    "name": "xaamin/sanctum",
+    "description": "Laravel/Lumen Sanctum provides a featherweight authentication system for SPAs and simple APIs.",
     "keywords": ["laravel", "sanctum", "auth"],
     "license": "MIT",
     "support": {
