--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
     "require": {
         "php": "^8.0.2",
         "ext-json": "*",
-        "illuminate/console": "^9.21|^10.0",
-        "illuminate/contracts": "^9.21|^10.0",
-        "illuminate/database": "^9.21|^10.0",
-        "illuminate/support": "^9.21|^10.0"
+        "illuminate/console": "^9.21|^10.0|^11.0",
+        "illuminate/contracts": "^9.21|^10.0|^11.0",
+        "illuminate/database": "^9.21|^10.0|^11.0",
+        "illuminate/support": "^9.21|^10.0|^11.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.3",
         "squizlabs/php_codesniffer": "^3.7"
