--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "xaamin/sanctum",
     "description": "Laravel/Lumen Sanctum provides a featherweight authentication system for SPAs and simple APIs.",
-    "keywords": ["laravel", "sanctum", "auth"],
+    "keywords": [
+        "laravel",
+        "sanctum",
+        "auth"
+    ],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/laravel/sanctum/issues",
@@ -20,14 +24,14 @@
     "require": {
         "php": "^8.0.2",
         "ext-json": "*",
-        "illuminate/console": "^9.21|^10.0|^11.0",
-        "illuminate/contracts": "^9.21|^10.0|^11.0",
-        "illuminate/database": "^9.21|^10.0|^11.0",
-        "illuminate/support": "^9.21|^10.0|^11.0"
+        "illuminate/console": "^9.21|^10.0|^11.0|^12.0",
+        "illuminate/contracts": "^9.21|^10.0|^11.0|^12.0",
+        "illuminate/database": "^9.21|^10.0|^11.0|^12.0",
+        "illuminate/support": "^9.21|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0|^10.0",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.3",
         "squizlabs/php_codesniffer": "^3.7"
